2013-09-12  Mark Wielaard  <mjw@redhat.com>

	* cu.c (intern_cu): If dwarf_offdie fails free cu.

2013-09-12  Mark Wielaard  <mjw@redhat.com>

	* linux-proc-maps.c (proc_maps_report): Don't fclose FILE in
	bad_report.

2013-09-12  Mark Wielaard  <mjw@redhat.com>

	* dwfl_module_getdwarf.c (find_symtab): Call elf_getdata with
	aux_xndxscn, not xndxscn, for aux_symxndxdata.

2013-08-25  Mark Wielaard  <mjw@redhat.com>

	* linux-kernel-modules.c (report_kernel): Pass add_p_vaddr as true
	to dwfl_report_elf.

2013-07-25  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Check for
	conflicts all the modules, not just the first one.  Compare L_LD if it
	is equal, not if it is in a module address range.

2013-07-23  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* libdwflP.h (__libdwfl_elf_address_range): Add internal_function.

2013-07-23  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* core-file.c (clear_r_debug_info): Close also ELF and FD.
	(dwfl_core_file_report): Call __libdwfl_report_elf for
	R_DEBUG_INFO.MODULE.
	* dwfl_report_elf.c (__libdwfl_elf_address_range): New function from
	code of ...
	(__libdwfl_report_elf): ... this function.  Call it.
	* dwfl_segment_report_module.c: Include unistd.h.
	(dwfl_segment_report_module): Use basename for MODULE->NAME.
	Clear MODULE if it has no build-id and we have segment with build-id.
	Ignore this segment only if MODULE still contains valid ELF.
	* libdwflP.h (__libdwfl_elf_address_range): New declaration.
	(struct r_debug_info_module): New fields fd, elf, l_addr, start, end
	and disk_file_has_build_id.
	(dwfl_link_map_report): Extend the comment.
	* link_map.c (report_r_debug): Extend the comment.  Always fill in new
	r_debug_info_module.  Initialize also the new r_debug_info_module
	fields.  Remove one FIXME comment.  Call __libdwfl_elf_address_range
	instead of __libdwfl_report_elf when R_DEBUG_INFO is not NULL.
