@@ -1,3 +1,9 @@
+2013-10-15  Mark Wielaard  <mjw@redhat.com>
+
+	* linux-proc-maps.c (proc_maps_report): Ignore non-absolute file
+	mappings.
+	(dwfl_linux_proc_find_elf): Don't abort, just return failure.
+
 2013-09-12  Mark Wielaard  <mjw@redhat.com>
 
 	* cu.c (intern_cu): If dwarf_offdie fails free cu.
